# OpenONI

./: CMakeLists.txt  README.md  run.sh
src/: classes.cpp  classes.hpp  main.cpp
